# grafix

./: CMakeLists.txt  CMakeSettings.json  todo.txt
analyzer/: analyze.py
grafix/: CMakeLists.txt  Makefile  collision.h  collision.hpp  constants.h  entities.h  entities.hpp  glUtils.hpp  grafix  hitbox.h  hitbox.hpp  main.cpp  physics.h  physics.hpp  player.h  player.hpp  polygon.h  polygon.hpp  utils.hpp  vector2.h
